feat: Add target language selector

--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,18 @@
     <div class="language-indicator">
       <span id="detectedLanguage">Detected language: </span>
     </div>
-    
+
+    <div class="language-selector-container">
+      <label for="targetLanguage">Target Language:</label>
+      <select id="targetLanguage">
+        <option value="zh-TW" selected>Traditional Chinese</option>
+        <option value="ja">Japanese</option>
+        <option value="ko">Korean</option>
+        <option value="en">English</option>
+        <option value="zh-CN">Simplified Chinese</option>
+      </select>
+    </div>
+
     <div class="button-container">
       <button id="translateBtn">Translate</button>
     </div>
